--- a/Ship/Ship.vcxproj.filters
+++ b/Ship/Ship.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Item_interface.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Slot.cpp">
+      <Filter>Modelos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Nave.h">
@@ -153,6 +156,9 @@
       <Filter>Modelos</Filter>
     </ClInclude>
     <ClInclude Include="Item_interface.h">
+      <Filter>Modelos</Filter>
+    </ClInclude>
+    <ClInclude Include="Slot.h">
       <Filter>Modelos</Filter>
     </ClInclude>
   </ItemGroup>
